# lliminal

./: Cargo.toml  LICENSE  flake.nix
examples/: anthropic_llm.rs
src/: main.rs
src/llm/: anthropic.rs  base.rs  mod.rs
src/llm/base/: message.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs
src/tui/controller/: chat.rs  count.rs  crossterm.rs  cursor.rs  mod.rs
src/tui/view/: chat.rs  counter.rs  mod.rs
src/tui/viewmodel/: app_state.rs  chat.rs  count.rs  mod.rs
