[package]
name = "lliminal"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
env_logger = "0.11.8"
eventsource-stream = "0.2.3"
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tui-input = { version = "0.14.0", features = ["crossterm"], default-features = false }
url = "2.5.4"

[dev-dependencies]
mockito = "1.7.0"
